--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "@angular/animations": "^8.0.0",
-    "@angular/cdk": "8.0.0",
+    "@angular/animations": "7.2.15",
+    "@angular/cdk": "7.3.7",
     "@angular/common": "7.2.5",
     "@angular/compiler": "7.2.5",
     "@angular/core": "7.2.5",
     "@angular/forms": "7.2.5",
-    "@angular/material": "^8.0.0",
+    "@angular/material": "7.3.7",
     "@angular/platform-browser": "7.2.5",
     "@angular/platform-browser-dynamic": "7.2.5",
     "@angular/router": "7.2.5",
